--- a/2_create_and_deploy_custom_model.ipynb
+++ b/2_create_and_deploy_custom_model.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First step is to create a [CustomModel](https://docs.snowflake.com/en/developer-guide/snowpark-ml/snowpark-ml-mlops-custom-models) class that will be used in Snowflake when calling the methods/functions of the model. \n",
+    "First step is to create a [CustomModel](https://docs.snowflake.com/en/developer-guide/snowpark-ml/model-registry/custom-models) class that will be used in Snowflake when calling the methods/functions of the model. \n",
     "\n",
     "In this quickstart we will only support the **predict** function, but if we want to support additional functions, we would specify those as methods of our class.\n",
     "\n",
@@ -137,7 +137,7 @@
    "source": [
     "We can now use this CustomModel class every time we want to log a PyCaret ClassificationExperiment to the Snowflake Model Registry.\n",
     "\n",
-    "Before logging the model we need to define the **ModelContext**, it has references to the objects we need. In this case we need to add a reference to where we have stored the *juice_best_model.pkl* file locally so it can be uploaded to Snowflake when we log it to the Snowflake Model Registry."
+    "Before logging the model we need to define the [ModelContext](https://docs.snowflake.com/en/developer-guide/snowpark-ml/reference/latest/api/model/snowflake.ml.model.custom_model.ModelContext), it has references to the objects we need. In this case we need to add a reference to where we have stored the *juice_best_model.pkl* file locally so it can be uploaded to Snowflake when we log it to the Snowflake Model Registry."
    ]
   },
   {
@@ -161,7 +161,7 @@
    "source": [
     "We can now create a new object based on our **PyCaretModel** class and test it before log it to the Snowflake Model Registry\n",
     "\n",
-    "Since we also need to generate a **ModelSignature** we can reuse the **test_data** DataFrame for generating the input part."
+    "Since we also need to generate a [ModelSignature](https://docs.snowflake.com/en/developer-guide/snowpark-ml/reference/latest/api/model/snowflake.ml.model.model_signature.ModelSignature), the Model Signature is used to infer the input and output columns for a model function (for example predict and predict_prob), we can reuse the **test_data** DataFrame for generating the input part."
    ]
   },
   {
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will store the output from the **predict** call in a Pandas DataFrame so it can be used for generating the output part of the **ModelSignature**"
+    "We will store the output from the **predict** call in a Pandas DataFrame so it can be used for generating the output part of the [ModelSignature](https://docs.snowflake.com/en/developer-guide/snowpark-ml/reference/latest/api/model/snowflake.ml.model.model_signature.ModelSignature)."
    ]
   },
   {
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now log the model,  we will use the model signature for the predict function. In order to know which function of themodel that uses the signature we need use the function name as the key for the **signatures** parameter. \n",
+    "We can now log the model using the [log_model](https://docs.snowflake.com/en/developer-guide/snowpark-ml/reference/latest/api/registry/snowflake.ml.registry.Registry) method, we will use the model signature for the predict function. In order to know which function of themodel that uses the signature we need use the function name as the key for the **signatures** parameter. \n",
     "\n",
     "There can be multiple models under the same **model_name** as long as the **version_name** is different. \n",
     "\n",
