Updated to a later version of Snowflake ML

--- a/2_create_and_deploy_custom_model.ipynb
+++ b/2_create_and_deploy_custom_model.ipynb
@@ -20,6 +20,7 @@
     "from snowflake.snowpark import Session\n",
     "from snowflake.snowpark.version import VERSION\n",
     "\n",
+    "from snowflake.ml.version import VERSION as ml_version\n",
     "from snowflake.ml.registry import Registry\n",
     "from snowflake.ml.model import custom_model\n",
     "from snowflake.ml.model import model_signature\n",
@@ -28,8 +29,8 @@
     "\n",
     "import pandas as pd\n",
     "import json\n",
-    "import os\n",
-    "import shutil\n",
+    "# import os\n",
+    "# import shutil\n",
     "\n",
     "# warning suppresion\n",
     "import warnings; warnings.simplefilter('ignore')"
@@ -85,7 +86,8 @@
     "print('Schema                      : {}'.format(session.get_current_schema()))\n",
     "print('Warehouse                   : {}'.format(session.get_current_warehouse()))\n",
     "print('Snowflake version           : {}'.format(snowflake_environment[0][1]))\n",
-    "print('Snowpark for Python version : {}.{}.{}'.format(snowpark_version[0],snowpark_version[1],snowpark_version[2]))"
+    "print('Snowpark for Python version : {}.{}.{}'.format(snowpark_version[0],snowpark_version[1],snowpark_version[2]))\n",
+    "print('Snowflake ML API version    : {}'.format(ml_version))"
    ]
   },
   {
@@ -126,7 +128,8 @@
     "    def predict(self, X: pd.DataFrame) -> pd.DataFrame:\n",
     "        model_output = predict_model(self.model, data=X)\n",
     "        # We will return both the predcited label as well as the score, as two sepereated columns\n",
-    "        res_df = pd.DataFrame({\"prediction_label\": model_output['prediction_label'], \"prediction_score\": model_output['prediction_score']})\n",
+    "        res_df = pd.DataFrame({\"prediction_label\": model_output['prediction_label']\n",
+    "                               , \"prediction_score\": model_output['prediction_score']})\n",
     "        \n",
     "        return res_df"
    ]
@@ -225,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now log the model using the [log_model](https://docs.snowflake.com/en/developer-guide/snowpark-ml/reference/latest/api/registry/snowflake.ml.registry.Registry) method, we will use the model signature for the predict function. In order to know which function of themodel that uses the signature we need use the function name as the key for the **signatures** parameter. \n",
+    "We can now log the model using the [log_model](https://docs.snowflake.com/en/developer-guide/snowpark-ml/reference/latest/api/registry/snowflake.ml.registry.Registry) method, we will use the model signature for the predict function. In order to know which function of the model that uses the signature we need use the function name as the key for the **signatures** parameter. \n",
     "\n",
     "There can be multiple models under the same **model_name** as long as the **version_name** is different. \n",
     "\n",
@@ -244,7 +247,7 @@
     "custom_mv = snowml_registry.log_model(\n",
     "    my_pycaret_model,\n",
     "    model_name=\"pycaret_juice\",\n",
-    "    version_name=\"version_1\",\n",
+    "    # version_name=\"version_1\", # Uncomment to choose your own version_name for the mpdel version\n",
     "    conda_dependencies=[\"pycaret==3.0.2\", \"scipy==1.11.4\", \"joblib==1.2.0\"],\n",
     "    options={\"relax_version\": False},\n",
     "    signatures={\"predict\": predict_sign},\n",
@@ -351,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
